--- a/AppServSalud/src/main/resources/templates/fragments/dashProfesionalMisDatos.html
+++ b/AppServSalud/src/main/resources/templates/fragments/dashProfesionalMisDatos.html
@@ -11,7 +11,7 @@
 
   <div
     id="dash-titulo"
-    class="mt-2 mb-2"
+    class="mt-5 mb-2 pt-4"
   >
     <div th:replace="/forms/editarProfesional :: editarProfesional"></div>
   </div>
