--- a/AppServSalud/src/main/resources/templates/vistaPerfil.html
+++ b/AppServSalud/src/main/resources/templates/vistaPerfil.html
@@ -9,7 +9,7 @@
     <body>
         <header th:replace="/fragments/header :: header"></header>
         <div th:replace="/fragments/toast :: div"></div>
-        <div class="container d-flex flex-column align-items-center mt-3">
+        <div class="container d-flex flex-column align-items-center mt-3 mb-3">
             <div
                 class="card"
                 style="background-color: #86d162; max-width: 500px;"
@@ -38,8 +38,8 @@
                 <article class="card-article mt-5">
                     <section class="card-body mt-3 text-center">
                         <h3>
-                            <span th:text="${usuario.nombre}"></span>
-                            <span th:text="${usuario.apellido}"></span>
+                            <span class="text-capitalize" th:text="${usuario.nombre}"></span>
+                            <span class="text-capitalize" th:text="${usuario.apellido}"></span>
                         </h3>
                         <hr>
                         <div>
@@ -97,53 +97,13 @@
                                     <span
                                         th:text="${usuario.descripcion}"
                                         sec:authorize="hasRole('ROLE_MEDICO')"
+                                        class="text-capitalize"
                                     ></span>
                                 </p>
                             </div>
                         </div>
                     </section>
                 </article>
-            </div>
-        </div>
-
-        <!-- Button trigger modal -->
-        <button
-            type="button"
-            class="btn btn-primary"
-            data-bs-toggle="modal"
-            data-bs-target="#exampleModal"
-        >
-            Notificaciones
-        </button>
-
-        <!-- Modal -->
-        <div
-            class="modal fade"
-            id="exampleModal"
-            tabindex="-1"
-            aria-labelledby="exampleModalLabel"
-            aria-hidden="true"
-        >
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1
-                            class="modal-title fs-5"
-                            id="exampleModalLabel"
-                        >Notificaciones</h1>
-                        <button
-                            type="button"
-                            class="btn-close"
-                            data-bs-dismiss="modal"
-                            aria-label="Close"
-                        ></button>
-                    </div>
-                    <div class="modal-body">
-                        <ul th:each="notificacion : ${usuario.notificaciones}">
-                            <li th:text="${notificacion.mensaje}"></li>
-                        </ul>
-                    </div>
-                </div>
             </div>
         </div>
         <footer th:replace="/fragments/footer :: footer"></footer>
