--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="UTF-8">
-  <title>Clinica House</title>
+  <title>Medi Ya</title>
   <meta
     name="logoHouse.ico"
     content="width=device-width, initial-scale=1.0"
