--- a/AppServSalud/src/main/resources/templates/fragments/header.html
+++ b/AppServSalud/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,7 @@
                     width="50"
                     height="40"
                 >
-                Clinica Medica
+                Medi Ya!
             </a>
         </div>
         <div class="d-flex">
