--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <video autoplay="" muted="" loop="" poster="https://www.sanatorioallende.com/wp-content/themes/sanatorio/images/home/sanatorio.png">
-            <source src="https://www.sanatorioallende.com/wp-content/themes/sanatorio/videos/home-video-nuevo.mp4" type="video/mp4">
+            <source th:src="@{/assets/MediVideo.MP4}" type="video/mp4">
         </video>
 
     </section>
