--- a/AppServSalud/src/main/resources/templates/forms/editarProfesional.html
+++ b/AppServSalud/src/main/resources/templates/forms/editarProfesional.html
@@ -75,6 +75,7 @@
                                     placeholder="Juan"
                                     id="pacienteNombre"
                                     th:value="${profesional.nombre}"
+                                    autofocus
                                 >
                             </div>
                             <div class="input-group mb-3">
