--- a/AppServSalud/src/main/resources/templates/forms/editarProfesionalAdmin.html
+++ b/AppServSalud/src/main/resources/templates/forms/editarProfesionalAdmin.html
@@ -38,6 +38,7 @@
                                 placeholder="Juan"
                                 id="profesionalNombre"
                                 th:value="${profesional.nombre}"
+                                autofocus
                             >
                         </div>
                     </div>
