--- a/AppServSalud/src/main/resources/templates/forms/formularioPaciente.html
+++ b/AppServSalud/src/main/resources/templates/forms/formularioPaciente.html
@@ -29,6 +29,7 @@
                                 name="nombre"
                                 placeholder="Juan"
                                 id="pacienteNombre"
+                                autofocus
                             >
                         </div>
                     </div>
