--- a/AppServSalud/src/main/resources/templates/forms/registroProfesional.html
+++ b/AppServSalud/src/main/resources/templates/forms/registroProfesional.html
@@ -37,6 +37,7 @@
                                 name="nombre"
                                 placeholder="Juan"
                                 id="profesionalNombre"
+                                autofocus
                             >
                         </div>
                     </div>
