--- a/AppServSalud/src/main/resources/templates/login.html
+++ b/AppServSalud/src/main/resources/templates/login.html
@@ -46,6 +46,7 @@
                                     id="exampleFormControlInput1"
                                     placeholder="name@example.com"
                                     name="username"
+                                    autofocus
                                     required
                                 >
                             </div>
