--- a/AppServSalud/src/main/resources/templates/fragments/header.html
+++ b/AppServSalud/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,4 @@
-<header style="background-color: rgba(164, 215, 164, 0.75);">
+<header style="background-color: rgba(164, 215, 164, 0.959);">
     <div class="container-fluid d-flex justify-content-between">
         <div class="mt-2">
             <a
@@ -36,67 +36,7 @@
                         id="navbarColor03"
                     >
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-                            <li class="nav-item">
-                                <a
-                                    class="nav-link active"
-                                    aria-current="page"
-                                    href="/"
-                                >Inicio</a>
-                            </li>
-                            <li
-                                class="nav-item dropdown"
-                                sec:authorize="hasRole('ROLE_ADMIN')"
-                            >
-                                <a
-                                    class="nav-link dropdown-toggle active"
-                                    href="#"
-                                    role="button"
-                                    data-bs-toggle="dropdown"
-                                    aria-expanded="false"
-                                >
-                                    Administracion
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li sec:authorize="hasRole('ROLE_ADD_PROFESIONAL')">
-                                        <a
-                                            class="dropdown-item"
-                                            href="/profesional/registro"
-                                        >Registrar Profesional</a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            class="dropdown-item"
-                                            href="/admin/registro"
-                                        >
-                                            Crear administrador
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            class="dropdown-item"
-                                            href="/paciente/todos"
-                                        >
-                                            Todos Los Pacientes
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            class="dropdown-item"
-                                            href="/profesional/todos"
-                                        >
-                                            Todos Los Profesionales
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            class="dropdown-item"
-                                            href="#"
-                                        >
-                                            ----
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
+                            <!-- NO LOGEADO -->
                             <li
                                 class="nav-item"
                                 sec:authorize="!isAuthenticated()"
@@ -120,6 +60,62 @@
                                     Iniciar sesión
                                 </a>
                             </li>
+                            <!-- LOGUEADO COMO ADMIN -->
+                            <li
+                                class="nav-item dropdown"
+                                sec:authorize="hasRole('ROLE_ADMIN')"
+                            >
+                                <div class="btn-group">
+                                    <button
+                                        class="nav-link dropdown-toggle active"
+                                        href="#"
+                                        type="button"
+                                        role="button"
+                                        data-bs-toggle="dropdown"
+                                        aria-expanded="false"
+                                    >
+                                        Administracion
+                                    </button>
+                                    <ul
+                                        class="dropdown-menu dropdown-menu-lg-end dropdown-menu-lg-start mt-2"
+                                        style="background-color: rgba(164, 215, 164, 0.959);"
+                                    >
+                                        <li sec:authorize="hasRole('ROLE_ADD_PROFESIONAL')" style="width: 200px;">
+                                            <a
+                                                class="nav-link"
+                                                href="/profesional/registro"
+                                            >
+                                                Registrar Profesional
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a
+                                                class="nav-link"
+                                                href="/admin/registro"
+                                            >
+                                                Crear administrador
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a
+                                                class="nav-link"
+                                                href="/paciente/todos"
+                                            >
+                                                Todos Los Pacientes
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a
+                                                class="nav-link"
+                                                href="/profesional/todos"
+                                            >
+                                                Todos Los Profesionales
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <!-- LOGUEADO COMO PROFESIONAL -->
                             <li
                                 class="nav-item"
                                 sec:authorize="hasRole('ROLE_MEDICO')"
@@ -131,93 +127,115 @@
                                     Panel Profesional
                                 </a>
                             </li>
+                            <!-- DESPLEGABLE DEL PERFIL -->
                             <li
                                 class="nav-item"
                                 sec:authorize="isAuthenticated()"
                             >
-                                <a
-                                    class="nav-link dropdown-toggle active"
-                                    href="#"
-                                    role="button"
-                                    data-bs-toggle="dropdown"
-                                    aria-expanded="false"
-                                >
-                                    Perfil
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                           <a
-                                            class="nav-link active"
-                                               th:href="@{/turno/misTurnos/__${#httpServletRequest.getRemoteUser()}__}"
-                                       sec:authorize="hasRole('ROLE_PACIENTE')"
+                                <div class="btn-group">
+                                    <button
+                                        class="nav-link dropdown-toggle active"
+                                        href="#"
+                                        type="button"
+                                        role="button"
+                                        data-bs-toggle="dropdown"
+                                        aria-expanded="false"
                                     >
-                                    Mis Turnos
-                                    </a>
-                                </li>
-                                <li>
-                                 <a class="nav-link active"
-                                    th:href="@{/paciente/perfil/__${#httpServletRequest.getRemoteUser()}__}"
-                                            sec:authorize="hasRole('ROLE_PACIENTE')"
-                                        >
-                                            Ver Mi Perfil</a>
-                                        <a
-                                            class="nav-link active"
-                                            th:href="@{/profesional/perfil/__${#httpServletRequest.getRemoteUser()}__}"
-                                            sec:authorize="hasRole('ROLE_MEDICO')"
-                                        >
-                                            Ver Mi Perfil</a>
-                                        <a
-                                            class="nav-link active"
-                                            th:href="@{/admin/perfil/__${#httpServletRequest.getRemoteUser()}__}"
-                                            sec:authorize="hasRole('ROLE_ADMIN')"
-                                        >
-                                            Ver Mi Perfil
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            class="nav-link active"
-                                            th:href="@{/paciente/modificar/__${#httpServletRequest.getRemoteUser()}__}"
-                                            sec:authorize="hasRole('ROLE_PACIENTE')"
-                                        >
-                                            Editar Perfil
-                                        </a>
-                                        <a
-                                            class="nav-link active"
-                                            th:href="@{/profesional/modificar/__${#httpServletRequest.getRemoteUser()}__}"
-                                            sec:authorize="hasRole('ROLE_MEDICO')"
-                                        >
-                                            Editar Perfil
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a
-                                            class="nav-link active"
-                                            th:href="@{/admin/modificar/__${#httpServletRequest.getRemoteUser()}__}"
-                                            sec:authorize="hasRole('ROLE_ADMIN')"
-                                        >
-                                            Editar Perfil
-                                        </a>
-                                    </li>
-                                    <li
-                                        class="nav-item"
-                                        sec:authorize="isAuthenticated()"
+                                        Perfil
+                                    </button>
+                                    <ul
+                                        class="dropdown-menu dropdown-menu-lg-end mt-2 p-1"
+                                        style="background-color: rgba(164, 215, 164, 0.959);"
                                     >
-                                        <form
-                                            th:action="@{/logout}"
-                                            method="post"
-                                        >
-                                            <input
+                                        <li>
+                                            <a
                                                 class="nav-link active"
-                                                type="submit"
-                                                value="Cerrar sesión"
+                                                th:href="@{/turno/misTurnos/__${#httpServletRequest.getRemoteUser()}__}"
+                                                sec:authorize="hasRole('ROLE_PACIENTE')"
                                             >
-                                        </form>
-                                    </li>
-                                </ul>
+                                                Mis Turnos
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a
+                                                class="nav-link active"
+                                                th:href="@{/paciente/perfil/__${#httpServletRequest.getRemoteUser()}__}"
+                                                sec:authorize="hasRole('ROLE_PACIENTE')"
+                                            >
+                                                Ver Mi Perfil</a>
+                                            <a
+                                                class="nav-link active"
+                                                th:href="@{/profesional/perfil/__${#httpServletRequest.getRemoteUser()}__}"
+                                                sec:authorize="hasRole('ROLE_MEDICO')"
+                                            >
+                                                Ver Mi Perfil</a>
+                                            <a
+                                                class="nav-link active"
+                                                th:href="@{/admin/perfil/__${#httpServletRequest.getRemoteUser()}__}"
+                                                sec:authorize="hasRole('ROLE_ADMIN')"
+                                            >
+                                                Ver Mi Perfil
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a
+                                                class="nav-link active"
+                                                th:href="@{/paciente/modificar/__${#httpServletRequest.getRemoteUser()}__}"
+                                                sec:authorize="hasRole('ROLE_PACIENTE')"
+                                            >
+                                                Editar Perfil
+                                            </a>
+                                            <a
+                                                class="nav-link active"
+                                                th:href="@{/profesional/modificar/__${#httpServletRequest.getRemoteUser()}__}"
+                                                sec:authorize="hasRole('ROLE_MEDICO')"
+                                            >
+                                                Editar Perfil
+                                            </a>
+                                            <a
+                                                class="nav-link active"
+                                                th:href="@{/admin/modificar/__${#httpServletRequest.getRemoteUser()}__}"
+                                                sec:authorize="hasRole('ROLE_ADMIN')"
+                                            >
+                                                Editar Perfil
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li>
+                                            <form
+                                                th:action="@{/logout}"
+                                                method="post"
+                                                class="p-0 nav-link"
+                                            >
+                                                <button
+                                                    class="btn btn-sm nav-link"
+                                                    type="submit"
+                                                    value="Cerrar sesión"
+                                                >
+                                                    <svg
+                                                        xmlns="http://www.w3.org/2000/svg"
+                                                        height="1.15em"
+                                                        viewBox="0 0 512 512"
+                                                    ><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                                                        <path
+                                                            d="M377.9 105.9L500.7 228.7c7.2 7.2 11.3 17.1 11.3 27.3s-4.1 20.1-11.3 27.3L377.9 406.1c-6.4 6.4-15 9.9-24 9.9c-18.7 0-33.9-15.2-33.9-33.9l0-62.1-128 0c-17.7 0-32-14.3-32-32l0-64c0-17.7 14.3-32 32-32l128 0 0-62.1c0-18.7 15.2-33.9 33.9-33.9c9 0 17.6 3.6 24 9.9zM160 96L96 96c-17.7 0-32 14.3-32 32l0 256c0 17.7 14.3 32 32 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32l-64 0c-53 0-96-43-96-96L0 128C0 75 43 32 96 32l64 0c17.7 0 32 14.3 32 32s-14.3 32-32 32z"
+                                                        />
+                                                    </svg>
+                                                    (Cerrar Sesión)
+                                                </button>
+                                            </form>
+                                        </li>
+                                    </ul>
+                                </div>
                             </li>
                         </ul>
                     </div>
+
+
+
+
                 </nav>
             </div>
         </div>
